[package]
name = "demand-curve-ui-sycamore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "e6cc745813da853edd63926f919739c3c6ae7dab" }
plotters = "0.3.1"
plotters-canvas = "0.3.0"