[package]
name = "demand-curve-ui-sycamore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = {version = "0.8.0", features = ["sycamore-futures"] }
#sycamore-futures = "0.8.0"
#{ git = "https://github.com/sycamore-rs/sycamore", rev = "e6cc745813da853edd63926f919739c3c6ae7dab" }
plotters = "0.3.1"
plotters-canvas = "0.3.0"
#env_logger = "0.9.1"
#log = "0.4.17"
reqwest = "0.11.11"
serde = "1.0.144"