[package]
name = "demand-curve-ui-sycamore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { version = "0.8.0", features = ["sycamore-futures", "suspense"] }
sycamore-futures = "0.8.0"
#{ git = "https://github.com/sycamore-rs/sycamore", rev = "e6cc745813da853edd63926f919739c3c6ae7dab" }

plotters = "0.3.1"
plotters-canvas = "0.3.0"
chrono = "0.4.22"

#env_logger = "0.9.1"
#log = "0.4.17"
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.144"
serde_json = "1.0"

# used to access the current javascript document and get things like the URL of the page
web-sys = { version = "0.3.60", features = ["Document", "Element"] }
# used to call native javascript functions
#js-sys = "0.3.60"
url = "2.3.1"